--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,4 @@
 @import "@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap/scss/bootstrap";
+@import "./components/checkbox.scss";
 @import "./styles.scss";
