--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 @import "@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap/scss/bootstrap";
 @import "./components/checkbox.scss";
+@import "./components/star-rating.scss";
 @import "./styles.scss";
