--- a/resources/scss/components/checkbox.scss
+++ b/resources/scss/components/checkbox.scss
@@ -1,4 +1,7 @@
 .form-check {
+  position: relative;
+  padding: 0;
+
   &-input {
     &--line {
       position: absolute;
@@ -20,7 +23,7 @@
   &-label {
     padding: 0 5px;
     border: solid 2px transparent;
-    border-radius: 10px;
+    // border-radius: 10px;
   }
 
   &-label:focus-within,
@@ -30,7 +33,10 @@
   }
 
   &-input--line:checked + &-label--line {
+    width: 100%;
+    height: 100%;
     background-color: $primary;
+    color: $light;
   }
 }
 
