--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,24 +1,22 @@
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-          border-radius: $radius;
+body.off {
+	overflow-x: hidden;
 }
 
-@mixin transition($transition) {
-    -moz-transition:    all $transition ease;
-    -o-transition:      all $transition ease;
-    -webkit-transition: all $transition ease;
-    -ms-transition: 		all $transition ease;
-    transition:         all $transition ease;
+.main-content {
+	transition: transform 0.3s ease-in-out;
 }
 
-@mixin translateX($translatex) {
-	-moz-transform: translateX($translatex);
-	-webkit-transform: translateX($translatex);
-	-ms-transform: translateX($translatex);
-	-o-transform: translateX($translatex);
-	transform: translateX($translatex);
+.main-content.off {
+	overflow-x: hidden;
+	transform: translateX(100%);
+}
+
+.height-0 {
+	height: 0px;
+}
+
+.position-relative {
+	position: relative;
 }
 
 .opacity-5 {
@@ -33,111 +31,3 @@
 		background-color: $gray-400;
 	}
 }
-
-#colorlib-main, .colorlib-nav-toggle {
-  top: 0;
-  @include translateX(270px);
-}
-
-.colorlib-nav-toggle {
-  cursor: pointer;
-  text-decoration: none;
-  &.active i {
-		&::before, &::after {
-			background: $black;
-		}
-  }
-  &.dark {
-  	&.active i {
-			&::before, &::after {
-				background: $black;
-			}
-	  }
-  }
-  &:hover, &:focus, &:active {
-  	outline: none;
-  	border-bottom: none!important;
-  }
-  i {
-  	position: relative;
-	  display: inline-block;
-	  width: 30px;
-	  height: 2px;
-	  color: $black;
-	  font:bold 14px/.4 Helvetica;
-	  text-transform: uppercase;
-	  text-indent:-55px;
-	  background: $black;
-	  transition: all .2s ease-out;
-		 &::before, &::after {
-	  	  content:'';
-		  width: 30px;
-		  height: 2px;
-		  background: $black;
-		  position: absolute;
-		  left:0;
-		  @include transition(.2s);
-	  }
-  }
-  &.dark {
-  	i {
-	  	position: relative;
-		  color: $black;
-		  background: $black;
-		  transition: all .2s ease-out;
-			 &::before, &::after {
-			  background: $black;
-			  @include transition(.2s);
-		  }
-	  }
-  }
-}
-
-.colorlib-nav-toggle i::before {
-  top: -7px;
-}
-.colorlib-nav-toggle i::after {
-  bottom: -7px;
-}
-.colorlib-nav-toggle:hover i::before {
-  top: -10px;
-}
-.colorlib-nav-toggle:hover i::after {
-  bottom: -10px;
-}
-.colorlib-nav-toggle.active i {
-	background: transparent;
-}
-.colorlib-nav-toggle.active i::before {
-  top:0;
-  -webkit-transform: rotateZ(45deg);
-     -moz-transform: rotateZ(45deg);
-      -ms-transform: rotateZ(45deg);
-       -o-transform: rotateZ(45deg);
-          transform: rotateZ(45deg);
-}
-.colorlib-nav-toggle.active i::after {
-  bottom:0;
-  -webkit-transform: rotateZ(-45deg);
-     -moz-transform: rotateZ(-45deg);
-      -ms-transform: rotateZ(-45deg);
-       -o-transform: rotateZ(-45deg);
-          transform: rotateZ(-45deg);
-}
-.colorlib-nav-toggle {
-	position: fixed;
-	left: -12px;
-	top: 0px;
-	z-index: 9999;
-	cursor: pointer;
-	opacity: 1;
-	visibility: hidden;
-	padding: 20px;
-	@include transition(.5s);
-	@include media-breakpoint-down(md){
-		opacity: 1;
-		visibility: visible;
-	}
-
-}
-
