--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,9 +2,11 @@
 @import "@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap/scss/bootstrap";
 @import "../js/plugins/chooser/chooser.css";
+@import "../js/plugins/modal/style.css";
 @import "./components/checkbox.scss";
 @import "./components/star-rating.scss";
 @import "./components/accordion.scss";
+@import "./components/burger.scss";
 @import "./filters/filters.scss";
 @import "./aside.scss";
 @import "./styles.scss";
