--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,28 +1,3 @@
-body.off {
-	overflow-x: hidden;
-}
-
-.main-content {
-	transition: transform 0.3s ease-in-out;
-}
-
-.main-content.off {
-	overflow-x: hidden;
-	transform: translateX(100%);
-}
-
-.height-0 {
-	height: 0px;
-}
-
-.position-relative {
-	position: relative;
-}
-
-.opacity-5 {
-	opacity: 0.5;
-}
-
 .disabled {
 	pointer-events: none;
 	filter: grayscale(0);
@@ -31,3 +6,14 @@ body.off {
 		background-color: $gray-400;
 	}
 }
+
+.hidden {
+	position: absolute;
+	opacity: 0;
+	visibility: hidden;
+}
+
+.opacity-5 {
+	opacity: 0.5;
+}
+
