--- a/resources/scss/aside.scss
+++ b/resources/scss/aside.scss
@@ -15,6 +15,7 @@ $mb: 25px;
 	#filter_location,
 	&-filters-area,
 	&-filters_cancel,
+	&-filters-options,
 	&-filters_apply {
 		margin-bottom: $mb;
 	}
