--- a/resources/scss/components/burger.scss
+++ b/resources/scss/components/burger.scss
@@ -22,7 +22,9 @@
 }
 
 .colorlib-nav-toggle {
-	left: 10px !important;
+	left: unset !important;
+	right: 10px !important;
+	top: 10px !important;
 	margin: 0;
 	padding: 20px !important;
 	border: none;
