--- a/resources/scss/aside.scss
+++ b/resources/scss/aside.scss
@@ -1,22 +1,28 @@
-$mb: 25px;
-
 .aside {
-	background-color: $light;
-	border-radius: 0px;
+  position: relative;
+  padding-top: 50px;
+  background-color: $light;
+  border-radius: 0px;
 
-	&.active {
-		transform: translateX(0%);
-	}
+  &.active {
+    transform: translateX(0%);
+  }
 
-	&-city,
-	&_logo,
-	&-filters-categories,
-	.star-rating,
-	#filter_location,
-	&-filters-area,
-	&-filters_cancel,
-	&-filters-options,
-	&-filters_apply {
-		margin-bottom: $mb;
-	}
+  &_close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+  }
+
+  .btn {
+    width: 100%;
+  }
 }
