--- a/resources/scss/components/burger.scss
+++ b/resources/scss/components/burger.scss
@@ -14,75 +14,72 @@
 }
 
 @mixin translateX($translatex) {
-	-moz-transform: translateX($translatex);
-	-webkit-transform: translateX($translatex);
-	-ms-transform: translateX($translatex);
-	-o-transform: translateX($translatex);
-	transform: translateX($translatex);
+  -moz-transform: translateX($translatex);
+  -webkit-transform: translateX($translatex);
+  -ms-transform: translateX($translatex);
+  -o-transform: translateX($translatex);
+  transform: translateX($translatex);
 }
 
 .colorlib-nav-toggle {
-	left: unset !important;
-	right: 10px !important;
-	top: 10px !important;
-	margin: 0;
-	padding: 20px !important;
-	border: none;
-	background-color: #e9ecefc0;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  width: max-content;
+  margin: 0;
+  padding: 20px !important;
+  border: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $primary;
   cursor: pointer;
   text-decoration: none;
   &.active i {
-		&::before, &::after {
-			background: $black;
-		}
+    &::before, &::after {
+      background: $black;
+    }
   }
   &.dark {
-  	&.active i {
-			&::before, &::after {
-				background: $black;
-			}
-	  }
+    &.active i {
+      &::before, &::after {
+        background: $black;
+      }
+    }
   }
   &:hover, &:focus, &:active {
-  	outline: none;
-  	border-bottom: none!important;
+    outline: none;
+    border-bottom: none!important;
   }
   i {
-  	position: relative;
-	  display: inline-block;
-	  width: 30px;
-	  height: 2px;
-	  color: $black;
-	  font:bold 14px/.4 Helvetica;
-	  text-transform: uppercase;
-	  text-indent:-55px;
-	  background: $black;
-	  transition: all .2s ease-out;
-		 &::before, &::after {
-	  	  content:'';
-		  width: 30px;
-		  height: 2px;
-		  background: $black;
-		  position: absolute;
-		  left:0;
-		  @include transition(.2s);
-	  }
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 2px;
+    color: $black;
+    font:bold 14px/.4 Helvetica;
+    text-transform: uppercase;
+    text-indent:-55px;
+    background: $black;
+    transition: all .2s ease-out;
+     &::before, &::after {
+        content:'';
+      width: 30px;
+      height: 2px;
+      background: $black;
+      position: absolute;
+      left:0;
+      @include transition(.2s);
+    }
   }
   &.dark {
-  	i {
-	  	position: relative;
-		  color: $black;
-		  background: $black;
-		  transition: all .2s ease-out;
-			 &::before, &::after {
-			  background: $black;
-			  @include transition(.2s);
-		  }
-	  }
+    i {
+      position: relative;
+      color: $black;
+      background: $black;
+      transition: all .2s ease-out;
+       &::before, &::after {
+        background: $black;
+        @include transition(.2s);
+      }
+    }
   }
 }
 
@@ -99,7 +96,7 @@
   bottom: -10px;
 }
 .colorlib-nav-toggle.active i {
-	background: transparent;
+  background: transparent;
 }
 .colorlib-nav-toggle.active i::before {
   top:0;
@@ -118,23 +115,23 @@
           transform: rotateZ(-45deg);
 }
 .colorlib-nav-toggle {
-	position: fixed;
-	left: -12px;
-	top: 0px;
-	z-index: 9999;
-	cursor: pointer;
-	opacity: 1;
-	visibility: hidden;
-	padding: 20px;
-	@include transition(.4s);
-	@include media-breakpoint-down(md){
-		opacity: 1;
-		visibility: visible;
-	}
+  position: fixed;
+  top: 12px;
+  right: 0;
+  z-index: 9999;
+  cursor: pointer;
+  opacity: 1;
+  visibility: hidden;
+  padding: 20px;
+  @include transition(.4s);
+  @include media-breakpoint-down(md){
+    opacity: 1;
+    visibility: visible;
+  }
 
 }
 
 .js-colorlib-nav-toggle.colorlib-nav-toggle > * {
-	pointer-events: none;
+  pointer-events: none;
 }
 
