--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,26 +1,57 @@
 .disabled {
-	pointer-events: none;
-	filter: grayscale(0);
+  pointer-events: none;
+  filter: grayscale(0);
 
-	&--grey {
-		background-color: $gray-400;
-	}
+  &--grey {
+    background-color: $gray-400;
+  }
 }
 
 .hidden {
-	position: absolute;
-	opacity: 0;
-	visibility: hidden;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .opacity-5 {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
+.btn.btn-info,
+.btn.btn-warning,
 .btn.btn-primary {
-	color: $light;
+  color: $light;
 }
 
+.btn.btn-info:active,
+.btn.btn-warning:active,
 .btn.btn-primary:active {
-	color: $light;
+  color: $light;
+}
+
+.close-icon {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    display: inline-block;
+    background-color: $secondary;
+  }
+
+  &::before {
+    transform: rotate(-45deg);
+  }
+  &::after {
+    transform: rotate(45deg);
+  }
 }
