--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,5 +14,6 @@
 @import "./filters/filters.scss";
 @import "./aside.scss";
 @import "./header.scss";
+@import "./home.scss";
 
 @import "./styles.scss";
