--- a/resources/scss/header.scss
+++ b/resources/scss/header.scss
@@ -1,6 +1,7 @@
 .header {
   $py: 10px;
   // position: fixed;
+  margin-bottom: 30px;
   padding-top: $py;
   padding-bottom: $py;
   box-shadow: 0 2px 2px rgba(0,0,0,.11);
@@ -10,3 +11,4 @@
     width: min-content;
   }
 }
+
