--- a/resources/scss/filters/city.scss
+++ b/resources/scss/filters/city.scss
@@ -23,7 +23,7 @@
     color:  $secondary;
 
     span {
-      border-bottom: 1px solid $secondary;
+      border-bottom: 1px dotted $secondary;
     }
 
     .chooser__icon {
