--- a/resources/scss/components/burger.scss
+++ b/resources/scss/components/burger.scss
@@ -29,7 +29,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  background-color: $primary;
+  background-color: transparent;
   cursor: pointer;
   text-decoration: none;
   &.active i {
@@ -115,10 +115,10 @@
           transform: rotateZ(-45deg);
 }
 .colorlib-nav-toggle {
-  position: fixed;
-  top: 12px;
-  right: 0;
-  z-index: 9999;
+  // position: fixed;
+  // top: 12px;
+  // right: 0;
+  // z-index: 9999;
   cursor: pointer;
   opacity: 1;
   visibility: hidden;
