--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .disabled {
   pointer-events: none;
   filter: grayscale(0);
@@ -17,6 +21,47 @@
   opacity: 0.5;
 }
 
+
+.btn.site-btn {
+  background-color: $light;
+  border: 1px solid $secondary;
+
+  &:hover {
+    background-color: $light;
+    border-color: $primary !important;
+
+  }
+  &:active {
+    box-shadow: 0 0px 5px $primary;
+    border-color: $primary !important;
+  }
+  &:focus-within,
+  &:focus-visible,
+  &:focus {
+    background-color: $light !important;
+  }
+
+
+    // &::before {
+    //   animation: arrow-animation 0.5s linear infinite;
+    // }
+
+  &:focus-within,
+  &:focus-visible,
+  &:focus {
+    background-color: $light !important;
+  }
+}
+
+.btn.btn-primary {
+  color: $primary;
+
+  &:active {
+    opacity: 0.8;
+    background-color: $primary;
+  }
+}
+
 .btn.btn-info,
 .btn.btn-warning,
 .btn.btn-primary {
@@ -34,29 +79,44 @@
   color: $light;
 }
 
-.close-icon {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.button_close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  pointer-events: none;
+  background-color: transparent;
+  border: none;
 
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
+  .close-icon {
+    position: relative;
     width: 100%;
-    height: 2px;
-    display: inline-block;
-    background-color: $secondary;
-  }
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
 
-  &::before {
-    transform: rotate(-45deg);
-  }
-  &::after {
-    transform: rotate(45deg);
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      display: inline-block;
+      background-color: $secondary;
+    }
+
+    &::before {
+      transform: rotate(-45deg);
+    }
+    &::after {
+      transform: rotate(45deg);
+    }
   }
 }
+
