--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,6 +14,7 @@
 @import "./components/burger.scss";
 @import "./components/nav-menu.scss";
 
+@import "./alert.scss";
 @import "./filters/filters.scss";
 @import "./aside.scss";
 @import "./nav-bar.scss";
