--- a/resources/scss/filters/filters.scss
+++ b/resources/scss/filters/filters.scss
@@ -6,6 +6,7 @@
     position: relative;
     // top: 50%;
     // left: 0;
+    width: 30%;
     padding: 15px 5px;
     // writing-mode: vertical-rl;
     // text-orientation: upright;
