--- a/resources/scss/components/burger.scss
+++ b/resources/scss/components/burger.scss
@@ -6,11 +6,11 @@
 }
 
 @mixin transition($transition) {
-    -moz-transition:    all $transition ease;
-    -o-transition:      all $transition ease;
-    -webkit-transition: all $transition ease;
-    -ms-transition: 		all $transition ease;
-    transition:         all $transition ease;
+    -moz-transition:    all $transition ease-in-out;
+    -o-transition:      all $transition ease-in-out;
+    -webkit-transition: all $transition ease-in-out;
+    -ms-transition: 		all $transition ease-in-out;
+    transition:         all $transition ease-in-out;
 }
 
 @mixin translateX($translatex) {
@@ -61,7 +61,7 @@
     text-transform: uppercase;
     text-indent:-55px;
     background: $black;
-    transition: all .2s ease-out;
+    transition: all .3s ease-out;
      &::before, &::after {
         content:'';
       width: 30px;
@@ -69,7 +69,7 @@
       background: $black;
       position: absolute;
       left:0;
-      @include transition(.2s);
+      @include transition(.3s);
     }
   }
   &.dark {
@@ -77,10 +77,10 @@
       position: relative;
       color: $black;
       background: $black;
-      transition: all .2s ease-out;
+      transition: all .3s ease-out;
        &::before, &::after {
         background: $black;
-        @include transition(.2s);
+        @include transition(.3s);
       }
     }
   }
@@ -118,19 +118,12 @@
           transform: rotateZ(-45deg);
 }
 .colorlib-nav-toggle {
-  // position: fixed;
-  // top: 12px;
-  // right: 0;
-  // z-index: 9999;
   cursor: pointer;
-  opacity: 1;
-  visibility: hidden;
   padding: 20px;
-  @include transition(.4s);
-  @include media-breakpoint-down(md){
-    opacity: 1;
-    visibility: visible;
-  }
+  opacity: 1;
+  visibility: visible;
+  @include transition(.3s);
+
 
 }
 
