--- a/resources/scss/footer.scss
+++ b/resources/scss/footer.scss
@@ -1,6 +1,10 @@
 .footer {
   position: relative;
   margin-bottom: 65px;
+  @media(min-width:992px) {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 
   &::before,
   &::after {
@@ -11,6 +15,12 @@
     display: inline-block;
     transform: translateX(-50%);
     background-color: $secondary;
+    @media(min-width: 576px) {
+      width: 80%;
+    }
+    @media(min-width: 768px) {
+      width: 100%;
+    }
   }
 
   &::before {
@@ -22,12 +32,24 @@
     bottom: 0;
     height: 1px;
   }
-}
 
-.footer-nav {
-  &_list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  &_logo {
+    @media(min-width: 768px) {
+      width: 30%;
+    }
   }
+
+  .nav-menu {
+    @media(min-width: 768px) {
+      width: 70%;
+
+      &_list {
+        max-height: 115px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+      }
+    }
+  }
+
 }
