--- a/resources/scss/nav-bar.scss
+++ b/resources/scss/nav-bar.scss
@@ -14,17 +14,11 @@
   -webkit-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
+
+  @media(min-width: 576px) {
+    width: 50%;
+    margin: 0;
+    margin-right: auto;
+  }
 }
-// @media (min-width: 992px) {
-//   .nav-bar {
-//     width: 25%; } }
-// @media (max-width: 991.98px) {
-//   .nav-bar {
-//     width: 320px;
-//     -moz-transform: translateX(-320px);
-//     -webkit-transform: translateX(-320px);
-//     -ms-transform: translateX(-320px);
-//     -o-transform: translateX(-320px);
-//     transform: translateX(-320px);
-//     padding-top: 2em;
-//     background: rgba(0, 0, 0, 0.04); } }
+
