--- a/resources/scss/aside.scss
+++ b/resources/scss/aside.scss
@@ -6,7 +6,7 @@
   background-color: $light;
   border-radius: 0px;
   @media(min-width: 576px) {
-    width: 50%;
+    width: max-content;
     margin: 0;
     margin-right: auto;
   }
