--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -41,6 +41,8 @@
 }
 
 .home-content-wrapper {
+  position: relative;
+  max-width: 100%;
   @media(min-width: 992px) {
     display: flex;
     flex-direction: row-reverse;
@@ -80,6 +82,12 @@
 }
 
 .shop_item {
+  cursor: pointer;
+
+  & > * {
+    pointer-events: none;
+  }
+
   @media(min-width: 992px) {
     &.hidden {
       position: relative;
@@ -88,7 +96,7 @@
     }
     &.show .shop-card {
       border-color: $primary;
-      border-width: 2px;
+      border-width: 1px;
     }
   }
 }
