--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -88,20 +88,27 @@
     pointer-events: none;
   }
 
+
   @media(min-width: 992px) {
     &.hidden {
       position: relative;
       opacity: 1;
       visibility: visible;
     }
-    &.show .shop-card {
-      border-color: $primary;
-      border-width: 1px;
+    & .card-body {
+      border: 5px solid transparent;
+    }
+    &.show .card-body {
+      // border-color: $primary;
+      // border-width: 5px;
+      border: 5px solid $primary;
+      border-radius: var(--bs-card-border-radius);
     }
   }
 }
 
 .shop-card {
+  box-sizing: content-box;
   &_title  {
     font-size: 20px;
   }
