--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -82,10 +82,28 @@
 }
 
 .shop_item {
-  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // cursor: pointer;
 
-  & > * {
-    pointer-events: none;
+  &.show {
+    display: flex;
+  }
+
+  // & > * {
+  //   pointer-events: none;
+  // }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 55%;
+    display: inline-block;
+    transform: translateY(-8%);
+    cursor: pointer;
   }
 
 
