--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -92,20 +92,22 @@
     display: flex;
   }
 
-  // & > * {
-  //   pointer-events: none;
-  // }
+  & a {
+    position: relative;
+    z-index: 1;
+  }
+
 
   &::after {
     content: '';
     position: absolute;
     width: 100%;
-    height: 55%;
+    height: 100%;
+    // height: 55%;
     display: inline-block;
-    transform: translateY(-8%);
+    // transform: translateY(-8%);
     cursor: pointer;
   }
-
 
   @media(min-width: 992px) {
     &.hidden {
