--- a/resources/scss/components/checkbox.scss
+++ b/resources/scss/components/checkbox.scss
@@ -38,5 +38,12 @@
     background-color: $primary;
     color: $light;
   }
+
+  &-input--line[checked] + &-label--line {
+    width: 100%;
+    height: 100%;
+    background-color: $primary;
+    color: $light;
+  }
 }
 
