--- a/resources/scss/layouts/footer.scss
+++ b/resources/scss/layouts/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  margin-bottom: 65px;
+  margin-bottom: 4em;
   @media(min-width:992px) {
     padding-left: 10%;
     padding-right: 10%;
