--- a/resources/scss/components/buttons.scss
+++ b/resources/scss/components/buttons.scss
@@ -8,7 +8,7 @@
 
   }
   &:active {
-    box-shadow: 0 0px 5px $primary;
+    box-shadow: 0 0px 0.3em $primary;
     border-color: $primary !important;
   }
   &:focus-within,
@@ -52,11 +52,11 @@
 
 .button_close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
+  top: 0.7em;
+  right: 0.7em;
+  width: 3em;
+  height: 3em;
+  padding: 0.7em;
   display: flex;
   justify-content: center;
   align-items: center;
