--- a/resources/scss/components/nav-menu.scss
+++ b/resources/scss/components/nav-menu.scss
@@ -5,10 +5,9 @@
   }
 
   &_item {
-    margin: 0 0 10px 0;
+    margin: 0 0 0.7em 0;
     padding: 0;
     list-style: none;
-    font-size: 18px;
     font-weight: 500;
   }
 
@@ -16,7 +15,7 @@
     color: rgba(0, 0, 0, 0.7);
     text-decoration: none;
     position: relative;
-    padding: 10px 0;
+    padding: 0.7em 0;
     font-family: "Poppins", Arial, sans-serif;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -29,7 +28,7 @@
       content: "";
       position: absolute;
       height: 2px;
-      bottom: 7px;
+      bottom: 0.4em;
       left: 0;
       right: 0;
       background-color: #1eafed;
