--- a/resources/scss/filters/city.scss
+++ b/resources/scss/filters/city.scss
@@ -1,6 +1,5 @@
 .filters-city {
   width: max-content;
-  padding-right: 30px;
   text-align: right;
 
   &_label {
@@ -14,7 +13,7 @@
     position: relative;
     margin: 0;
     padding: 0;
-    padding-right: 25px;
+    padding-right: 1.5em;
     display: flex;
     align-content: center;
     align-items: center;
@@ -28,8 +27,8 @@
 
     .chooser__icon {
       position: absolute;
-      right: 5px;
-      width: 10px;
+      right: 0.3em;
+      width: 0.7em;
       border-top: 7px solid $secondary;
       border-left: 7px solid transparent;
       border-right: 7px solid transparent;
@@ -43,15 +42,15 @@
   }
 
   &_list {
-    top: 30px;
+    top: 2em;
     left: 50%;
     min-width: 100%;
     width: max-content;
     margin: 0;
-    padding: 15px 0px;
+    padding: 1em 0px;
     background-color: $light;
     border: 1px solid $secondary;
-    border-radius: 10px;
+    border-radius: 0.3em;
     transform: translateX(-50%);
 
     &.chooser__list.open {
@@ -60,7 +59,7 @@
   }
 
   &_item {
-    padding: 5px 20px;
+    padding: 0.3em 1.2em;
 
     &.focused,
     &.hover {
