--- a/resources/scss/layouts/aside.scss
+++ b/resources/scss/layouts/aside.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: max-content;
   margin: 0;
-  padding-top: 50px;
+  padding-top: 4em;
   background-color: $light;
   border-radius: 0px;
   @media(min-width: 576px) {
@@ -17,5 +17,11 @@
 
   .btn {
     width: 100%;
+  }
+
+  &-city {
+    @media(min-width: 768px) {
+      display: none;
+    }
   }
 }
