swiper config; styles

--- a/resources/js/plugins/modal/style.scss
+++ b/resources/js/plugins/modal/style.scss
@@ -24,7 +24,7 @@
   padding: 20px;
   display: none;
   vertical-align: middle;
-  background-color: #fff;
+  background-color: $light;
   border-radius: 10px;
   cursor: default;
   text-align: left;
