--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,7 +5,7 @@
 @import '~bootstrap/scss/variables';
 
 @import "../js/plugins/chooser/chooser.css";
-@import "../js/plugins/modal/style.css";
+@import "../js/plugins/modal/style.scss";
 
 @import "./components/buttons.scss";
 @import "./components/checkbox.scss";
