--- a/resources/scss/pages/home.scss
+++ b/resources/scss/pages/home.scss
@@ -49,18 +49,24 @@
     left: 0;
     width: unset;
     padding: 4em 0.8em;
-    writing-mode: vertical-rl;
-    text-orientation: upright;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: translateY(-50%);
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     font-size: 1.2em;
     z-index: 999;
 
+    span {
+      text-orientation: upright;
+      writing-mode: vertical-rl;
+    }
+
     &::before {
       content: '→';
-      position: relative;
-
+      position: absolute;
+      top: 1em;
       margin-bottom: 10px;
     }
 
@@ -72,13 +78,13 @@
 
     @keyframes arrow-animation {
       0% {
-        left: 0em;
+        transform: translateX(0%);
       }
       70% {
-        left: 0.3em;
+        transform: translateX(20%);
       }
       100% {
-        left: 0em;
+        transform: translateX(0%);
       }
     }
   }
@@ -133,48 +139,50 @@
     height: 100vh;
     overflow-y: auto;
   }
-}
 
-.shop_item {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &.show {
-    display: flex;
-  }
-
-  & a {
+  &_item {
     position: relative;
-    z-index: 1;
-  }
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    &.show {
+      display: flex;
+    }
 
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    cursor: pointer;
-  }
-
-  @media(min-width: 992px) {
-    &.hidden {
+    & a {
       position: relative;
-      opacity: 1;
-      visibility: visible;
+      padding: 0.7em 0;
+      z-index: 1;
     }
-    & .card-body {
-      border: 0.3em solid transparent;
+
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: inline-block;
+      cursor: pointer;
     }
-    &.show .card-body {
-      border: 0.3em solid $primary;
-      border-radius: var(--bs-card-border-radius);
+
+    @media(min-width: 992px) {
+      &.hidden {
+        position: relative;
+        opacity: 1;
+        visibility: visible;
+      }
+      & .card-body {
+        border: 0.3em solid transparent;
+      }
+      &.show .card-body {
+        border: 0.3em solid $primary;
+        border-radius: var(--bs-card-border-radius);
+      }
     }
   }
 }
+
 
 .shop-card {
   box-sizing: content-box;
@@ -209,4 +217,8 @@
   }
 }
 
+.more-details {
+  margin-left: auto;
+  padding: 0.3em 0.5em;
+}
 
