--- a/resources/scss/pages/home.scss
+++ b/resources/scss/pages/home.scss
@@ -40,9 +40,6 @@
 .filters-show {
   position: relative;
   width: 30%;
-  padding: 1em 0.3em;
-
-
   @media(min-width: 992px) {
     position: fixed;
     top: 50%;
@@ -52,16 +49,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     transform: translateY(-50%);
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     font-size: 1.2em;
     z-index: 999;
 
-    span {
-      text-orientation: upright;
-      writing-mode: vertical-rl;
-    }
+    // span {
+    //   position: relative;
+    //   display: inline-block;
+    //   text-orientation: upright;
+    //   writing-mode: vertical-rl;
+    // }
 
     &::before {
       content: '→';
