--- a/resources/scss/pages/shop.scss
+++ b/resources/scss/pages/shop.scss
@@ -1,17 +1,352 @@
 .preview {
+  max-width: 100%;
+  margin-bottom: 2em;
+  justify-content: center;
+  column-gap: 0.5em;
+
+  &_list {
+    margin: 0;
+    padding: 0;
+    column-gap: 0.5em;
+    list-style: none;
+  }
+
+  &_item {
+    &--3,
+    &--4 {
+      display: none;
+    }
+  }
+
+  &_button {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+  }
+
   &_button > * {
     pointer-events: none;
+  }
+
+  &_img {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  &_count {
+    background-color: transparent;
+    border: none;
+  }
+}
+
+.head {
+  margin-bottom: 2em;
+  align-items: center;
+  column-gap: 0.7em;
+
+  &_title {
+    font-size: 1.4em;
+    line-height: 150%;
+  }
+}
+
+.work {
+  margin-bottom: 2em;
+}
+
+.rating {
+  $fs-rating: calc(16px + (50 - 16)*((100vw - 320px) / (1200 - 320)));
+  $fs-label: calc(18px + (50 - 16)*((100vw - 320px) / (1200 - 320)));
+
+  &_average {
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: center;
+
+    .rating {
+      margin-left: 3%;
+      font-size: $fs-rating;
+    }
+  }
+
+  &_label {
+    margin: 0;
+    margin-right: auto;
+    padding: 0;
+    font-size: $fs-label;
+    font-weight: 600;
+    text-align: right;
+  }
+
+  &_list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &_item {
+    display: flex;
+  }
+
+  &_count {
+    margin: 0;
+    font-size: $fs-rating;
+  }
+
+  &_comments-count {
+    font-size: $fs-rating;
+  }
+}
+
+.rating-socials {
+  margin: 0;
+  margin-bottom: 1em;
+  padding: 0;
+  justify-content: center;
+  list-style: none;
+
+  &_item {
+    font-size: 3em;
+  }
+
+  &_item:not(:last-child) {
+    margin-right: 0.7em;
+  }
+}
+
+.contacts {
+  margin-bottom: 2em;
+
+  &_list {
+    margin: 0;
+    margin-bottom: 0.8em;
+    padding: 0;
+    list-style: none;
+  }
+}
+
+.working-mode {
+  margin-bottom: 2em;
+
+  .shop_subtitle {
+    text-align: center;
+  }
+
+  &_list {
+    width: 100%;
+    th, td {
+      text-align: center;
+    }
+  }
+}
+
+.location {
+  margin-bottom: 2em;
+
+  &_map {
+    width: 100%;
+    height: 250px;
+  }
+}
+
+.description {
+  position: relative;
+  margin-bottom: 3em;
+  text-align: center;
+
+  .elipsis {
+    opacity: 0;
+  }
+
+  &_wrapper {
+    position: relative;
+    overflow: hidden;
+    transition: height 0.2s linear;
+
+    &.close {
+        height: 7.5em;
+    }
+
+    &.close + .elipsis {
+      opacity: 1;
+    }
+  }
+
+  &_text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding-right: 1em;
+  }
+
+  &_more {
+    margin: auto;
+    border-bottom: 2px solid $primary;
+    transition: transform
+  }
+}
+
+.categories {
+  margin-bottom: 3em;
+
+  &_list,
+  &_sublist {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &_collapse {
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    padding-left: 1em;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+
+
+    &::before {
+      content: '-';
+      position: absolute;
+      left: 0.5em;
+    }
+  }
+  &_collapse.collapsed {
+    &::before {
+      content: '+';
+    }
+  }
+
+  &_title {
+    margin-bottom: 0;
+    // font-size: 1.2em;
+    font-weight: 600;
+  }
+
+  &_head,
+  &_subitem {
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &_item:not(:first-child),
+  &_subitem {
+    border-top: 1px solid $secondary;
+  }
+  &_item:last-child {
+    border-bottom: 1px solid $secondary;
+  }
+
+  &_subitem {
+    padding-left: 2em;
+    font-size: 1em;
+  }
+
+}
+
+.reviews {
+  margin-bottom: 3em;
+
+  &_service-name {
+    margin-right: auto;
+    font-weight: 600;
+  }
+
+  &_count {
+    color: $secondary;
+  }
+
+  &_item {
+    .accordion-button {
+      display: flex;
+      justify-content: space-between;
+    }
+    .accordion-button::after {
+      margin-left: 0.5em;
+    }
+  }
+
+  &_rating-count {
+    display: none;
+  }
+
+  &_subtitle {
+    margin: 0;
+    padding: 0.5em 0;
+  }
+
+  &_body {
+    max-height: 30em;
+    padding: 0 1em;
+    overflow-y: auto;
+  }
+
+  &_list,
+  &_sublist {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &_comment {
+    margin-bottom: 1em;
+    padding: 1em;
+    border: 1px solid $secondary;
+    border-radius: 1rem;
+  }
+
+  &_name,
+  &_date {
+    font-weight: 600;
+  }
+
+  &_name {
+    margin-right: auto;
+  }
+
+  &_text {
+    margin-bottom: 0;
+  }
+
+  &_response {
+    margin-bottom: 1em;
+
+    &.collapsed::before {
+      content: 'Показать ответы';
+    }
+    &::before {
+      content: 'Скрыть ответы';
+    }
+  }
+
+  &_sublist {
+    padding-left: 2em;
+  }
+
+  &_subcomment {
+    margin-bottom: 0.5em;
+    padding-bottom: 0.2em;
   }
 }
 
 .photos {
-  max-width: 70%;
+  // max-width: 70%;
+  width: 100%;
   padding: 0;
   background-color: $light;
 
   &_img {
-    width: 94%;
-    max-width: 100%;
+    width: 100%;
+    // width: 94%;
+    // max-width: 100%;
     margin: auto;
     height: 100vh;
     object-fit: contain;
@@ -30,16 +365,18 @@
 }
 
 .photos_close.button_close {
-  top: -1em;
-  right: -5.3em;
-  width: 5em;
-  height: 5em;
+  top: 0em;
+  right: 0.3em;
+  // top: -1em;
+  // right: -5.3em;
+  width: 3em;
+  height: 3em;
   z-index: 2;
 }
 
 .photos_close.button_close span.close-icon::after,
 .photos_close.button_close span.close-icon::before {
-  background-color: $light;
+  // background-color: $light;
   height: 3px;
 }
 
