--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -28,3 +28,19 @@ a {
 .opacity-5 {
   opacity: 0.5;
 }
+
+.rating-count {
+  margin-left: 2%;
+  margin-right: 2%;
+  color: $starColor;
+
+  .rating_star {
+    margin-right: 0.2em;
+  }
+}
+.shadow-line {
+  width: 100%;
+  height: 1px;
+  display: inline-block;
+  box-shadow: 0 0.15em 0.15em rgba(0, 0, 0, 0.11);
+}
