--- a/resources/scss/pages/home.scss
+++ b/resources/scss/pages/home.scss
@@ -24,6 +24,8 @@
     }
 
     @media(min-width: 992px) {
+      max-width: 70%;
+      margin: auto;
       display: block;
     }
   }
@@ -197,6 +199,7 @@
   list-style: none;
 
   &_item {
+    margin-right: 1em;
     a {
       font-size: 2.3em;
     }
@@ -219,6 +222,11 @@
 
 .more-details {
   margin-left: auto;
+  margin-right: 2em;
   padding: 0.3em 0.5em;
+  display: none;
+  @media(min-width: 992px) {
+    display: inline-block;
+  }
 }
 
