--- a/resources/scss/pages/shop.scss
+++ b/resources/scss/pages/shop.scss
@@ -523,6 +523,7 @@
   // max-width: 70%;
   width: 100%;
   max-height: 100vh;
+  height: 100vh;
   padding: 0;
   padding-bottom: 2em;
   background-color:rgb(0, 0, 0);
@@ -533,7 +534,7 @@
     // width: 94%;
     // max-width: 100%;
     margin: auto;
-    height: 100%;
+    height: 100vh;
     object-fit: contain;
     color: transparent;
     z-index: 2;
